add web components instead of divs

--- a/public/index.html
+++ b/public/index.html
@@ -19,16 +19,16 @@
     <div class="container">
         <div class="loading"><div></div><div></div><div></div></div>
 
-        <div class="config">
+        <snake-config>
             <input type="text" class="ip" placeholder="IP Address" minlength="1" maxlength="15">
             <input type="text" class="port" placeholder="Port (Default: 4002)" minlength="1">
 
             <input type="submit" value="Play">
-        </div>
+        </snake-config>
 
-        <div class="game">
+        <snake-game>
             <canvas></canvas>
-        </div>
+        </snake-game>
     </div>
 </body>
 </html>
