--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
 
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/loading.css">
+    <link rel="stylesheet" href="styles/config.css">
+    <link rel="stylesheet" href="styles/game.css">
 </head>
 <body>
     <noscript>Turn on javascript to play the game</noscript>
